# NERS_570_final_proj

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  file_structure.txt  parameter-file.prm  zigzag.inp
src/: equation_data.h  main.cc  main_cc.txt  navier_stokes_projection.h  run_time_parameters.cc  run_time_parameters.h
src/navier_stokes_projection/: navier_stokes_projection_assemble_advection_term.cc  navier_stokes_projection_assemble_gradient_operator.cc  navier_stokes_projection_assemble_time_independent_matrices.cc  navier_stokes_projection_assemble_vorticity.cc  navier_stokes_projection_constructor.cc  navier_stokes_projection_constructor_cc.txt  navier_stokes_projection_create_triangulation_and_dofs.cc  navier_stokes_projection_diffusion_step.cc  navier_stokes_projection_initialize.cc  navier_stokes_projection_instantiation.cc  navier_stokes_projection_interpolate_velocity.cc  navier_stokes_projection_output_results.cc  navier_stokes_projection_projection_step.cc  navier_stokes_projection_run.cc  navier_stokes_projection_run_cc.txt  navier_stokes_projection_update_pressure.cc
tests/: basic_tests.cc  test_params.prm
